# swarm_simulator

./: .gitignore  .gitmodules  LICENSE  README.md
swarm_planner/: CMakeLists.txt  setting
swarm_planner/config/: catvehicle.rviz
swarm_planner/include/: ecbs_planner.hpp  init_traj_planner.hpp  matplotlibcpp.h  mission.hpp  param.hpp  plan_result.hpp  rbp_corridor.hpp  rbp_planner.hpp  rbp_plotter.hpp  rbp_publisher.hpp  scp_planner.hpp  scp_plotter.hpp  scp_publisher.hpp  sfc_corridor.hpp  sfc_planner.hpp  sfc_publisher.hpp  sipp_planner.hpp  sp_const.hpp
swarm_planner/launch/: catvehicle.launch  create_octomap_world.launch  hetero_rbp_random_forest.launch  map_saver.launch  plan_rbp_empty_space.launch  plan_rbp_random_forest.launch  plan_rbp_test.launch  plan_rbpflat_corridor.launch  plan_rbpflat_random_forest.launch  plan_scp_empty_space.launch  plan_sfc_random_forest.launch  spawn_mav.launch
swarm_planner/launch/rqtplot_config/: rqtplot_config.perspective
swarm_planner/launch/rviz_config/: config_16agents.rviz  config_1agents.rviz  config_2agents.rviz  config_32agents.rviz  config_4agents.rviz  config_64agents.rviz  config_6agents.rviz  config_8agents.rviz  config_8agents_side.rviz  config_hetero.rviz
swarm_planner/log/: QPmodel.lp  SFC_QPmodel.lp  coef1.csv  coef10.csv  coef11.csv  coef12.csv  coef13.csv  coef14.csv  coef15.csv  coef16.csv  coef17.csv  coef18.csv  coef19.csv  coef2.csv  coef20.csv  coef21.csv  coef22.csv  coef23.csv  coef24.csv  coef25.csv  coef26.csv  coef27.csv  coef28.csv  coef29.csv  coef3.csv  coef30.csv  coef31.csv  coef32.csv  coef33.csv  coef34.csv  coef35.csv  coef36.csv  coef37.csv  coef38.csv  coef39.csv  coef4.csv  coef40.csv  coef41.csv  coef42.csv  coef43.csv  (+26 more)
swarm_planner/missions/: hetero_2agents_15.json  hetero_4agents_15.json  mission_16agents_15.json  mission_16agents_20.json  mission_16agents_25.json  mission_16agents_30.json  mission_16agents_35.json  mission_2agents_25.json  mission_2agents_50.json  mission_32agents_12.json  mission_32agents_15.json  mission_4agents_15.json  mission_4agents_15_2.json  mission_4agents_25_aty.json  mission_4agents_35_aty.json  mission_64agents_12.json  mission_64agents_15.json  mission_64agents_20.json  mission_8agents_10.json  mission_8agents_12.json  mission_8agents_120.json  mission_8agents_15.json  mission_8agents_30.json  mission_8agents_60.json  mission_8agents_hetero.json
swarm_planner/src/: hetero_traj_planner_rbp.cpp  random_map_generator.cpp  swarm_traj_planner_geometric.cpp  swarm_traj_planner_rbp.cpp  swarm_traj_planner_rbp_flat.cpp  swarm_traj_planner_rbp_test_all.cpp  swarm_traj_planner_scp.cpp  swarm_traj_planner_sfc.cpp
swarm_planner/urdf/: catvehicle (사본).xacro  catvehicle.gazebo  catvehicle.xacro
swarm_planner/worlds/: IROS2019.bt  IROS2019_1.bt  IROS2019_2.bt  batchfig.bt  corridor1.bt  corridor2.bt  empty.bt  experiment.bt  experiment2.bt  experiment3.bt  experiment3_2.bt  fig16.bt  map1.bt  map11.bt  map12.bt  map13.bt  map14.bt  map15.bt  map16.bt  map17.bt  map18.bt  map19.bt  map2.bt  map20.bt  map21.bt  map22.bt  map23.bt  map24.bt  map25.bt  map26.bt  map27.bt  map28.bt  map29.bt  map3.bt  map30.bt  map31.bt  map32.bt  map33.bt  map34.bt  map35.bt  (+24 more)
